--- a/examples/docusaurus/pokeapi/docs/api/index.mdx
+++ b/examples/docusaurus/pokeapi/docs/api/index.mdx
@@ -4,6 +4,9 @@ sidebar_label: About
 ---
 
 import "@speakeasy-api/docs-md/docusaurus.css";
+import {
+Pill
+} from "@speakeasy-api/docs-md/react";
 
 
 # About PokéAPI
@@ -30,3 +33,7 @@ Created by [**Paul Hallett**](https://github.com/phalt) and other [**PokéAPI co
 Servers
 
 - https://pokeapi.co
+
+# Global Security
+
+### cookieAuth <Pill variant="info">cookie</Pill> <Pill variant="info">apiKey</Pill> \{#cookieAuth\}
