--- a/examples/nextra/pokeapi/src/app/api/endpoint/encounters/page.mdx
+++ b/examples/nextra/pokeapi/src/app/api/endpoint/encounters/page.mdx
@@ -74,7 +74,7 @@ Methods by which the player might can encounter Pokémon in the wild, e.g., walk
   headingId="operation-api_v2_encounter_method_list_security_cookieauth"
   typeAnnotations={[{"title":"cookie","variant":"info"},{"title":"apiKey","variant":"info"}]}
   hasFrontMatter={false}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -91,7 +91,7 @@ Methods by which the player might can encounter Pokémon in the wild, e.g., walk
   headingId="operation-api_v2_encounter_method_list_security_basicauth"
   typeAnnotations={[{"title":"basic","variant":"info"},{"title":"http","variant":"info"}]}
   hasFrontMatter={false}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -131,7 +131,7 @@ Methods by which the player might can encounter Pokémon in the wild, e.g., walk
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"query","variant":"info"}]}
   hasFrontMatter={true}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -155,7 +155,7 @@ Number of results to return per page.
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"query","variant":"info"}]}
   hasFrontMatter={true}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -179,7 +179,7 @@ The initial index from which to return the results.
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"query","variant":"info"}]}
   hasFrontMatter={true}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -238,7 +238,7 @@ Case-insensitive query applied on the `name` property.
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
   hasFrontMatter={true}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -266,7 +266,7 @@ _Example:_
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
   hasFrontMatter={true}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -294,7 +294,7 @@ http://api.example.org/accounts/?offset=400&limit=100
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
   hasFrontMatter={true}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -322,7 +322,7 @@ http://api.example.org/accounts/?offset=200&limit=100
   typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_encounter_method_list_responses_200_application-json_results_encountermethodsummary\">EncounterMethodSummary</a>","children":[{"label":"EncounterMethodSummary","linkedLabel":"<a href=\"#operation-api_v2_encounter_method_list_responses_200_application-json_results_encountermethodsummary\">EncounterMethodSummary</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
   hasFrontMatter={false}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -450,7 +450,7 @@ Methods by which the player might can encounter Pokémon in the wild, e.g., walk
   headingId="operation-api_v2_encounter_method_retrieve_security_cookieauth"
   typeAnnotations={[{"title":"cookie","variant":"info"},{"title":"apiKey","variant":"info"}]}
   hasFrontMatter={false}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -467,7 +467,7 @@ Methods by which the player might can encounter Pokémon in the wild, e.g., walk
   headingId="operation-api_v2_encounter_method_retrieve_security_basicauth"
   typeAnnotations={[{"title":"basic","variant":"info"},{"title":"http","variant":"info"}]}
   hasFrontMatter={false}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -507,7 +507,7 @@ Methods by which the player might can encounter Pokémon in the wild, e.g., walk
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"path","variant":"info"},{"title":"required","variant":"warning"}]}
   hasFrontMatter={true}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -565,7 +565,7 @@ This parameter can be a string or an integer.
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}
   hasFrontMatter={false}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -583,7 +583,7 @@ This parameter can be a string or an integer.
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}
   hasFrontMatter={false}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -601,7 +601,7 @@ This parameter can be a string or an integer.
   typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_encounter_method_retrieve_responses_200_application-json_names_encountermethodname\">EncounterMethodName</a>","children":[{"label":"EncounterMethodName","linkedLabel":"<a href=\"#operation-api_v2_encounter_method_retrieve_responses_200_application-json_names_encountermethodname\">EncounterMethodName</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}
   hasFrontMatter={false}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -724,7 +724,7 @@ This parameter can be a string or an integer.
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
   hasFrontMatter={false}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -785,7 +785,7 @@ Conditions which affect what pokemon might appear in the wild, e.g., day or nigh
   headingId="operation-api_v2_encounter_condition_list_security_cookieauth"
   typeAnnotations={[{"title":"cookie","variant":"info"},{"title":"apiKey","variant":"info"}]}
   hasFrontMatter={false}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -802,7 +802,7 @@ Conditions which affect what pokemon might appear in the wild, e.g., day or nigh
   headingId="operation-api_v2_encounter_condition_list_security_basicauth"
   typeAnnotations={[{"title":"basic","variant":"info"},{"title":"http","variant":"info"}]}
   hasFrontMatter={false}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -842,7 +842,7 @@ Conditions which affect what pokemon might appear in the wild, e.g., day or nigh
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"query","variant":"info"}]}
   hasFrontMatter={true}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -866,7 +866,7 @@ Number of results to return per page.
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"query","variant":"info"}]}
   hasFrontMatter={true}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -890,7 +890,7 @@ The initial index from which to return the results.
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"query","variant":"info"}]}
   hasFrontMatter={true}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -949,7 +949,7 @@ Case-insensitive query applied on the `name` property.
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
   hasFrontMatter={true}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -977,7 +977,7 @@ _Example:_
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
   hasFrontMatter={true}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -1005,7 +1005,7 @@ http://api.example.org/accounts/?offset=400&limit=100
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
   hasFrontMatter={true}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -1033,7 +1033,7 @@ http://api.example.org/accounts/?offset=200&limit=100
   typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_encounter_condition_list_responses_200_application-json_results_encounterconditionsummary\">EncounterConditionSummary</a>","children":[{"label":"EncounterConditionSummary","linkedLabel":"<a href=\"#operation-api_v2_encounter_condition_list_responses_200_application-json_results_encounterconditionsummary\">EncounterConditionSummary</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
   hasFrontMatter={false}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -1161,7 +1161,7 @@ Conditions which affect what pokemon might appear in the wild, e.g., day or nigh
   headingId="operation-api_v2_encounter_condition_retrieve_security_cookieauth"
   typeAnnotations={[{"title":"cookie","variant":"info"},{"title":"apiKey","variant":"info"}]}
   hasFrontMatter={false}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -1178,7 +1178,7 @@ Conditions which affect what pokemon might appear in the wild, e.g., day or nigh
   headingId="operation-api_v2_encounter_condition_retrieve_security_basicauth"
   typeAnnotations={[{"title":"basic","variant":"info"},{"title":"http","variant":"info"}]}
   hasFrontMatter={false}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -1218,7 +1218,7 @@ Conditions which affect what pokemon might appear in the wild, e.g., day or nigh
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"path","variant":"info"},{"title":"required","variant":"warning"}]}
   hasFrontMatter={true}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -1276,7 +1276,7 @@ This parameter can be a string or an integer.
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}
   hasFrontMatter={false}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -1294,7 +1294,7 @@ This parameter can be a string or an integer.
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}
   hasFrontMatter={false}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -1312,7 +1312,7 @@ This parameter can be a string or an integer.
   typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_encounter_condition_retrieve_responses_200_application-json_names_encounterconditionname\">EncounterConditionName</a>","children":[{"label":"EncounterConditionName","linkedLabel":"<a href=\"#operation-api_v2_encounter_condition_retrieve_responses_200_application-json_names_encounterconditionname\">EncounterConditionName</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}
   hasFrontMatter={false}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -1435,7 +1435,7 @@ This parameter can be a string or an integer.
   typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_encounter_condition_retrieve_responses_200_application-json_values_encounterconditionvaluesummary\">EncounterConditionValueSummary</a>","children":[{"label":"EncounterConditionValueSummary","linkedLabel":"<a href=\"#operation-api_v2_encounter_condition_retrieve_responses_200_application-json_values_encounterconditionvaluesummary\">EncounterConditionValueSummary</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}
   hasFrontMatter={false}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -1563,7 +1563,7 @@ Encounter condition values are the various states that an encounter condition ca
   headingId="operation-api_v2_encounter_condition_value_list_security_cookieauth"
   typeAnnotations={[{"title":"cookie","variant":"info"},{"title":"apiKey","variant":"info"}]}
   hasFrontMatter={false}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -1580,7 +1580,7 @@ Encounter condition values are the various states that an encounter condition ca
   headingId="operation-api_v2_encounter_condition_value_list_security_basicauth"
   typeAnnotations={[{"title":"basic","variant":"info"},{"title":"http","variant":"info"}]}
   hasFrontMatter={false}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -1620,7 +1620,7 @@ Encounter condition values are the various states that an encounter condition ca
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"query","variant":"info"}]}
   hasFrontMatter={true}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -1644,7 +1644,7 @@ Number of results to return per page.
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"query","variant":"info"}]}
   hasFrontMatter={true}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -1668,7 +1668,7 @@ The initial index from which to return the results.
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"query","variant":"info"}]}
   hasFrontMatter={true}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -1727,7 +1727,7 @@ Case-insensitive query applied on the `name` property.
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
   hasFrontMatter={true}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -1755,7 +1755,7 @@ _Example:_
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
   hasFrontMatter={true}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -1783,7 +1783,7 @@ http://api.example.org/accounts/?offset=400&limit=100
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
   hasFrontMatter={true}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -1811,7 +1811,7 @@ http://api.example.org/accounts/?offset=200&limit=100
   typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_encounter_condition_value_list_responses_200_application-json_results_encounterconditionvaluesummary\">EncounterConditionValueSummary</a>","children":[{"label":"EncounterConditionValueSummary","linkedLabel":"<a href=\"#operation-api_v2_encounter_condition_value_list_responses_200_application-json_results_encounterconditionvaluesummary\">EncounterConditionValueSummary</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
   hasFrontMatter={false}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -1939,7 +1939,7 @@ Encounter condition values are the various states that an encounter condition ca
   headingId="operation-api_v2_encounter_condition_value_retrieve_security_cookieauth"
   typeAnnotations={[{"title":"cookie","variant":"info"},{"title":"apiKey","variant":"info"}]}
   hasFrontMatter={false}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -1956,7 +1956,7 @@ Encounter condition values are the various states that an encounter condition ca
   headingId="operation-api_v2_encounter_condition_value_retrieve_security_basicauth"
   typeAnnotations={[{"title":"basic","variant":"info"},{"title":"http","variant":"info"}]}
   hasFrontMatter={false}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -1996,7 +1996,7 @@ Encounter condition values are the various states that an encounter condition ca
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"path","variant":"info"},{"title":"required","variant":"warning"}]}
   hasFrontMatter={true}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -2054,7 +2054,7 @@ This parameter can be a string or an integer.
   typeInfo={{"label":"EncounterConditionSummary","linkedLabel":"<a href=\"#operation-api_v2_encounter_condition_value_retrieve_responses_200_application-json_condition_encounterconditionsummary\">EncounterConditionSummary</a>","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}
   hasFrontMatter={false}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -2110,7 +2110,7 @@ This parameter can be a string or an integer.
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}
   hasFrontMatter={false}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -2128,7 +2128,7 @@ This parameter can be a string or an integer.
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}
   hasFrontMatter={false}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -2146,7 +2146,7 @@ This parameter can be a string or an integer.
   typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_encounter_condition_value_retrieve_responses_200_application-json_names_encounterconditionvaluename\">EncounterConditionValueName</a>","children":[{"label":"EncounterConditionValueName","linkedLabel":"<a href=\"#operation-api_v2_encounter_condition_value_retrieve_responses_200_application-json_names_encounterconditionvaluename\">EncounterConditionValueName</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}
   hasFrontMatter={false}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -2312,7 +2312,7 @@ Handles Pokemon Encounters as a sub-resource.
   headingId="operation-api_v2_pokemon_encounters_retrieve_security_cookieauth"
   typeAnnotations={[{"title":"cookie","variant":"info"},{"title":"apiKey","variant":"info"}]}
   hasFrontMatter={false}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -2329,7 +2329,7 @@ Handles Pokemon Encounters as a sub-resource.
   headingId="operation-api_v2_pokemon_encounters_retrieve_security_basicauth"
   typeAnnotations={[{"title":"basic","variant":"info"},{"title":"http","variant":"info"}]}
   hasFrontMatter={false}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -2369,7 +2369,7 @@ Handles Pokemon Encounters as a sub-resource.
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"path","variant":"info"},{"title":"required","variant":"warning"}]}
   hasFrontMatter={false}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -2427,7 +2427,7 @@ Handles Pokemon Encounters as a sub-resource.
   id="ResponseBody"
   headingId="operation-api_v2_pokemon_encounters_retrieve_responses_200_application-json_responsebody"
   hasFrontMatter={false}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandableBreakoutTitle slot="title">
