--- a/examples/nextra/pokeapi/src/app/api/endpoint/games/page.mdx
+++ b/examples/nextra/pokeapi/src/app/api/endpoint/games/page.mdx
@@ -73,7 +73,7 @@ A generation is a grouping of the Pokémon games that separates them based on th
   headingId="operation-api_v2_generation_list_security_cookieauth"
   typeAnnotations={[{"title":"cookie","variant":"info"},{"title":"apiKey","variant":"info"}]}
   hasFrontMatter={false}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -90,7 +90,7 @@ A generation is a grouping of the Pokémon games that separates them based on th
   headingId="operation-api_v2_generation_list_security_basicauth"
   typeAnnotations={[{"title":"basic","variant":"info"},{"title":"http","variant":"info"}]}
   hasFrontMatter={false}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -130,7 +130,7 @@ A generation is a grouping of the Pokémon games that separates them based on th
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"query","variant":"info"}]}
   hasFrontMatter={true}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -154,7 +154,7 @@ Number of results to return per page.
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"query","variant":"info"}]}
   hasFrontMatter={true}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -178,7 +178,7 @@ The initial index from which to return the results.
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"query","variant":"info"}]}
   hasFrontMatter={true}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -234,7 +234,7 @@ Case-insensitive query applied on the `name` property.
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
   hasFrontMatter={true}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -262,7 +262,7 @@ _Example:_
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
   hasFrontMatter={true}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -290,7 +290,7 @@ http://api.example.org/accounts/?offset=400&limit=100
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
   hasFrontMatter={true}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -318,7 +318,7 @@ http://api.example.org/accounts/?offset=200&limit=100
   typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_generation_list_responses_200_application-json_results_generationsummary\">GenerationSummary</a>","children":[{"label":"GenerationSummary","linkedLabel":"<a href=\"#operation-api_v2_generation_list_responses_200_application-json_results_generationsummary\">GenerationSummary</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
   hasFrontMatter={false}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -446,7 +446,7 @@ A generation is a grouping of the Pokémon games that separates them based on th
   headingId="operation-api_v2_generation_retrieve_security_cookieauth"
   typeAnnotations={[{"title":"cookie","variant":"info"},{"title":"apiKey","variant":"info"}]}
   hasFrontMatter={false}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -463,7 +463,7 @@ A generation is a grouping of the Pokémon games that separates them based on th
   headingId="operation-api_v2_generation_retrieve_security_basicauth"
   typeAnnotations={[{"title":"basic","variant":"info"},{"title":"http","variant":"info"}]}
   hasFrontMatter={false}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -503,7 +503,7 @@ A generation is a grouping of the Pokémon games that separates them based on th
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"path","variant":"info"},{"title":"required","variant":"warning"}]}
   hasFrontMatter={true}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -561,7 +561,7 @@ This parameter can be a string or an integer.
   typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_generation_retrieve_responses_200_application-json_abilities_abilitysummary\">AbilitySummary</a>","children":[{"label":"AbilitySummary","linkedLabel":"<a href=\"#operation-api_v2_generation_retrieve_responses_200_application-json_abilities_abilitysummary\">AbilitySummary</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}
   hasFrontMatter={false}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -646,7 +646,7 @@ This parameter can be a string or an integer.
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}
   hasFrontMatter={false}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -664,7 +664,7 @@ This parameter can be a string or an integer.
   typeInfo={{"label":"RegionSummary","linkedLabel":"<a href=\"#operation-api_v2_generation_retrieve_responses_200_application-json_main_region_regionsummary\">RegionSummary</a>","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}
   hasFrontMatter={false}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -720,7 +720,7 @@ This parameter can be a string or an integer.
   typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_generation_retrieve_responses_200_application-json_moves_movesummary\">MoveSummary</a>","children":[{"label":"MoveSummary","linkedLabel":"<a href=\"#operation-api_v2_generation_retrieve_responses_200_application-json_moves_movesummary\">MoveSummary</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}
   hasFrontMatter={false}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -805,7 +805,7 @@ This parameter can be a string or an integer.
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}
   hasFrontMatter={false}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -823,7 +823,7 @@ This parameter can be a string or an integer.
   typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_generation_retrieve_responses_200_application-json_names_generationname\">GenerationName</a>","children":[{"label":"GenerationName","linkedLabel":"<a href=\"#operation-api_v2_generation_retrieve_responses_200_application-json_names_generationname\">GenerationName</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}
   hasFrontMatter={false}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -946,7 +946,7 @@ This parameter can be a string or an integer.
   typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_generation_retrieve_responses_200_application-json_pokemon_species_pokemonspeciessummary\">PokemonSpeciesSummary</a>","children":[{"label":"PokemonSpeciesSummary","linkedLabel":"<a href=\"#operation-api_v2_generation_retrieve_responses_200_application-json_pokemon_species_pokemonspeciessummary\">PokemonSpeciesSummary</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}
   hasFrontMatter={false}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -1031,7 +1031,7 @@ This parameter can be a string or an integer.
   typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_generation_retrieve_responses_200_application-json_types_typesummary\">TypeSummary</a>","children":[{"label":"TypeSummary","linkedLabel":"<a href=\"#operation-api_v2_generation_retrieve_responses_200_application-json_types_typesummary\">TypeSummary</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}
   hasFrontMatter={false}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -1116,7 +1116,7 @@ This parameter can be a string or an integer.
   typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_generation_retrieve_responses_200_application-json_version_groups_versiongroupsummary\">VersionGroupSummary</a>","children":[{"label":"VersionGroupSummary","linkedLabel":"<a href=\"#operation-api_v2_generation_retrieve_responses_200_application-json_version_groups_versiongroupsummary\">VersionGroupSummary</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}
   hasFrontMatter={false}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -1244,7 +1244,7 @@ A Pokédex is a handheld electronic encyclopedia device; one which is capable of
   headingId="operation-api_v2_pokedex_list_security_cookieauth"
   typeAnnotations={[{"title":"cookie","variant":"info"},{"title":"apiKey","variant":"info"}]}
   hasFrontMatter={false}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -1261,7 +1261,7 @@ A Pokédex is a handheld electronic encyclopedia device; one which is capable of
   headingId="operation-api_v2_pokedex_list_security_basicauth"
   typeAnnotations={[{"title":"basic","variant":"info"},{"title":"http","variant":"info"}]}
   hasFrontMatter={false}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -1301,7 +1301,7 @@ A Pokédex is a handheld electronic encyclopedia device; one which is capable of
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"query","variant":"info"}]}
   hasFrontMatter={true}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -1325,7 +1325,7 @@ Number of results to return per page.
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"query","variant":"info"}]}
   hasFrontMatter={true}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -1349,7 +1349,7 @@ The initial index from which to return the results.
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"query","variant":"info"}]}
   hasFrontMatter={true}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -1405,7 +1405,7 @@ Case-insensitive query applied on the `name` property.
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
   hasFrontMatter={true}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -1433,7 +1433,7 @@ _Example:_
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
   hasFrontMatter={true}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -1461,7 +1461,7 @@ http://api.example.org/accounts/?offset=400&limit=100
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
   hasFrontMatter={true}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -1489,7 +1489,7 @@ http://api.example.org/accounts/?offset=200&limit=100
   typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_pokedex_list_responses_200_application-json_results_pokedexsummary\">PokedexSummary</a>","children":[{"label":"PokedexSummary","linkedLabel":"<a href=\"#operation-api_v2_pokedex_list_responses_200_application-json_results_pokedexsummary\">PokedexSummary</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
   hasFrontMatter={false}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -1617,7 +1617,7 @@ A Pokédex is a handheld electronic encyclopedia device; one which is capable of
   headingId="operation-api_v2_pokedex_retrieve_security_cookieauth"
   typeAnnotations={[{"title":"cookie","variant":"info"},{"title":"apiKey","variant":"info"}]}
   hasFrontMatter={false}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -1634,7 +1634,7 @@ A Pokédex is a handheld electronic encyclopedia device; one which is capable of
   headingId="operation-api_v2_pokedex_retrieve_security_basicauth"
   typeAnnotations={[{"title":"basic","variant":"info"},{"title":"http","variant":"info"}]}
   hasFrontMatter={false}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -1674,7 +1674,7 @@ A Pokédex is a handheld electronic encyclopedia device; one which is capable of
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"path","variant":"info"},{"title":"required","variant":"warning"}]}
   hasFrontMatter={true}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -1732,7 +1732,7 @@ This parameter can be a string or an integer.
   typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_pokedex_retrieve_responses_200_application-json_descriptions_pokedexdescription\">PokedexDescription</a>","children":[{"label":"PokedexDescription","linkedLabel":"<a href=\"#operation-api_v2_pokedex_retrieve_responses_200_application-json_descriptions_pokedexdescription\">PokedexDescription</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}
   hasFrontMatter={false}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -1855,7 +1855,7 @@ This parameter can be a string or an integer.
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}
   hasFrontMatter={false}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -1873,7 +1873,7 @@ This parameter can be a string or an integer.
   typeInfo={{"label":"boolean","linkedLabel":"boolean","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
   hasFrontMatter={false}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -1891,7 +1891,7 @@ This parameter can be a string or an integer.
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}
   hasFrontMatter={false}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -1909,7 +1909,7 @@ This parameter can be a string or an integer.
   typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_pokedex_retrieve_responses_200_application-json_names_pokedexname\">PokedexName</a>","children":[{"label":"PokedexName","linkedLabel":"<a href=\"#operation-api_v2_pokedex_retrieve_responses_200_application-json_names_pokedexname\">PokedexName</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}
   hasFrontMatter={false}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -2032,7 +2032,7 @@ This parameter can be a string or an integer.
   typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_pokedex_retrieve_responses_200_application-json_pokemon_entries_pokemon_entry\">pokemon_entry</a>","children":[{"label":"pokemon_entry","linkedLabel":"<a href=\"#operation-api_v2_pokedex_retrieve_responses_200_application-json_pokemon_entries_pokemon_entry\">pokemon_entry</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}
   hasFrontMatter={false}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -2185,7 +2185,7 @@ https://pokeapi.co/api/v2/pokemon-species/1/
   typeInfo={{"label":"RegionSummary","linkedLabel":"<a href=\"#operation-api_v2_pokedex_retrieve_responses_200_application-json_region_regionsummary\">RegionSummary</a>","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}
   hasFrontMatter={false}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -2241,7 +2241,7 @@ https://pokeapi.co/api/v2/pokemon-species/1/
   typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_pokedex_retrieve_responses_200_application-json_version_groups_pokemon_entry\">pokemon_entry</a>","children":[{"label":"pokemon_entry","linkedLabel":"<a href=\"#operation-api_v2_pokedex_retrieve_responses_200_application-json_version_groups_pokemon_entry\">pokemon_entry</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}
   hasFrontMatter={false}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -2437,7 +2437,7 @@ Versions of the games, e.g., Red, Blue or Yellow.
   headingId="operation-api_v2_version_list_security_cookieauth"
   typeAnnotations={[{"title":"cookie","variant":"info"},{"title":"apiKey","variant":"info"}]}
   hasFrontMatter={false}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -2454,7 +2454,7 @@ Versions of the games, e.g., Red, Blue or Yellow.
   headingId="operation-api_v2_version_list_security_basicauth"
   typeAnnotations={[{"title":"basic","variant":"info"},{"title":"http","variant":"info"}]}
   hasFrontMatter={false}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -2494,7 +2494,7 @@ Versions of the games, e.g., Red, Blue or Yellow.
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"query","variant":"info"}]}
   hasFrontMatter={true}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -2518,7 +2518,7 @@ Number of results to return per page.
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"query","variant":"info"}]}
   hasFrontMatter={true}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -2542,7 +2542,7 @@ The initial index from which to return the results.
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"query","variant":"info"}]}
   hasFrontMatter={true}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -2598,7 +2598,7 @@ Case-insensitive query applied on the `name` property.
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
   hasFrontMatter={true}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -2626,7 +2626,7 @@ _Example:_
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
   hasFrontMatter={true}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -2654,7 +2654,7 @@ http://api.example.org/accounts/?offset=400&limit=100
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
   hasFrontMatter={true}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -2682,7 +2682,7 @@ http://api.example.org/accounts/?offset=200&limit=100
   typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_version_list_responses_200_application-json_results_versionsummary\">VersionSummary</a>","children":[{"label":"VersionSummary","linkedLabel":"<a href=\"#operation-api_v2_version_list_responses_200_application-json_results_versionsummary\">VersionSummary</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
   hasFrontMatter={false}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -2810,7 +2810,7 @@ Versions of the games, e.g., Red, Blue or Yellow.
   headingId="operation-api_v2_version_retrieve_security_cookieauth"
   typeAnnotations={[{"title":"cookie","variant":"info"},{"title":"apiKey","variant":"info"}]}
   hasFrontMatter={false}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -2827,7 +2827,7 @@ Versions of the games, e.g., Red, Blue or Yellow.
   headingId="operation-api_v2_version_retrieve_security_basicauth"
   typeAnnotations={[{"title":"basic","variant":"info"},{"title":"http","variant":"info"}]}
   hasFrontMatter={false}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -2867,7 +2867,7 @@ Versions of the games, e.g., Red, Blue or Yellow.
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"path","variant":"info"},{"title":"required","variant":"warning"}]}
   hasFrontMatter={true}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -2933,7 +2933,7 @@ not sure how to add anything other than a hyperlink
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}
   hasFrontMatter={false}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -2951,7 +2951,7 @@ not sure how to add anything other than a hyperlink
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}
   hasFrontMatter={false}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -2969,7 +2969,7 @@ not sure how to add anything other than a hyperlink
   typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_version_retrieve_responses_200_application-json_names_versionname\">VersionName</a>","children":[{"label":"VersionName","linkedLabel":"<a href=\"#operation-api_v2_version_retrieve_responses_200_application-json_names_versionname\">VersionName</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}
   hasFrontMatter={false}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -3092,7 +3092,7 @@ not sure how to add anything other than a hyperlink
   typeInfo={{"label":"VersionGroupSummary","linkedLabel":"<a href=\"#operation-api_v2_version_retrieve_responses_200_application-json_version_group_versiongroupsummary\">VersionGroupSummary</a>","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}
   hasFrontMatter={false}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -3191,7 +3191,7 @@ Version groups categorize highly similar versions of the games.
   headingId="operation-api_v2_version_group_list_security_cookieauth"
   typeAnnotations={[{"title":"cookie","variant":"info"},{"title":"apiKey","variant":"info"}]}
   hasFrontMatter={false}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -3208,7 +3208,7 @@ Version groups categorize highly similar versions of the games.
   headingId="operation-api_v2_version_group_list_security_basicauth"
   typeAnnotations={[{"title":"basic","variant":"info"},{"title":"http","variant":"info"}]}
   hasFrontMatter={false}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -3248,7 +3248,7 @@ Version groups categorize highly similar versions of the games.
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"query","variant":"info"}]}
   hasFrontMatter={true}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -3272,7 +3272,7 @@ Number of results to return per page.
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"query","variant":"info"}]}
   hasFrontMatter={true}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -3296,7 +3296,7 @@ The initial index from which to return the results.
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"query","variant":"info"}]}
   hasFrontMatter={true}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -3355,7 +3355,7 @@ Case-insensitive query applied on the `name` property.
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
   hasFrontMatter={true}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -3383,7 +3383,7 @@ _Example:_
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
   hasFrontMatter={true}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -3411,7 +3411,7 @@ http://api.example.org/accounts/?offset=400&limit=100
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
   hasFrontMatter={true}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -3439,7 +3439,7 @@ http://api.example.org/accounts/?offset=200&limit=100
   typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_version_group_list_responses_200_application-json_results_versiongroupsummary\">VersionGroupSummary</a>","children":[{"label":"VersionGroupSummary","linkedLabel":"<a href=\"#operation-api_v2_version_group_list_responses_200_application-json_results_versiongroupsummary\">VersionGroupSummary</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
   hasFrontMatter={false}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -3567,7 +3567,7 @@ Version groups categorize highly similar versions of the games.
   headingId="operation-api_v2_version_group_retrieve_security_cookieauth"
   typeAnnotations={[{"title":"cookie","variant":"info"},{"title":"apiKey","variant":"info"}]}
   hasFrontMatter={false}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -3584,7 +3584,7 @@ Version groups categorize highly similar versions of the games.
   headingId="operation-api_v2_version_group_retrieve_security_basicauth"
   typeAnnotations={[{"title":"basic","variant":"info"},{"title":"http","variant":"info"}]}
   hasFrontMatter={false}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -3624,7 +3624,7 @@ Version groups categorize highly similar versions of the games.
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"path","variant":"info"},{"title":"required","variant":"warning"}]}
   hasFrontMatter={true}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -3682,7 +3682,7 @@ This parameter can be a string or an integer.
   typeInfo={{"label":"GenerationSummary","linkedLabel":"<a href=\"#operation-api_v2_version_group_retrieve_responses_200_application-json_generation_generationsummary\">GenerationSummary</a>","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}
   hasFrontMatter={false}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -3738,7 +3738,7 @@ This parameter can be a string or an integer.
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}
   hasFrontMatter={false}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -3756,7 +3756,7 @@ This parameter can be a string or an integer.
   typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_version_group_retrieve_responses_200_application-json_move_learn_methods_move_learn_method\">move_learn_method</a>","children":[{"label":"move_learn_method","linkedLabel":"<a href=\"#operation-api_v2_version_group_retrieve_responses_200_application-json_move_learn_methods_move_learn_method\">move_learn_method</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}
   hasFrontMatter={false}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -3861,7 +3861,7 @@ https://pokeapi.co/api/v2/move-learn-method/1/
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}
   hasFrontMatter={false}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -3879,7 +3879,7 @@ https://pokeapi.co/api/v2/move-learn-method/1/
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
   hasFrontMatter={false}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -3897,7 +3897,7 @@ https://pokeapi.co/api/v2/move-learn-method/1/
   typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_version_group_retrieve_responses_200_application-json_pokedexes_move_learn_method\">move_learn_method</a>","children":[{"label":"move_learn_method","linkedLabel":"<a href=\"#operation-api_v2_version_group_retrieve_responses_200_application-json_pokedexes_move_learn_method\">move_learn_method</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}
   hasFrontMatter={false}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -4002,7 +4002,7 @@ https://pokeapi.co/api/v2/move-learn-method/1/
   typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_version_group_retrieve_responses_200_application-json_regions_move_learn_method\">move_learn_method</a>","children":[{"label":"move_learn_method","linkedLabel":"<a href=\"#operation-api_v2_version_group_retrieve_responses_200_application-json_regions_move_learn_method\">move_learn_method</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}
   hasFrontMatter={false}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -4107,7 +4107,7 @@ https://pokeapi.co/api/v2/move-learn-method/1/
   typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_version_group_retrieve_responses_200_application-json_versions_versionsummary\">VersionSummary</a>","children":[{"label":"VersionSummary","linkedLabel":"<a href=\"#operation-api_v2_version_group_retrieve_responses_200_application-json_versions_versionsummary\">VersionSummary</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}
   hasFrontMatter={false}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
