--- a/examples/nextra/pokeapi/src/app/api/page.mdx
+++ b/examples/nextra/pokeapi/src/app/api/page.mdx
@@ -3,6 +3,9 @@ sidebarTitle: About
 ---
 
 import "@speakeasy-api/docs-md/nextra.css";
+import {
+Pill
+} from "@speakeasy-api/docs-md/react";
 
 
 # About PokéAPI
@@ -29,3 +32,7 @@ Created by [**Paul Hallett**](https://github.com/phalt) and other [**PokéAPI co
 Servers
 
 - https://pokeapi.co
+
+# Global Security
+
+### cookieAuth <Pill variant="info">cookie</Pill> <Pill variant="info">apiKey</Pill> [#cookieAuth]
