--- a/examples/docusaurus/mistral/docs/api/index.mdx
+++ b/examples/docusaurus/mistral/docs/api/index.mdx
@@ -4,6 +4,9 @@ sidebar_label: About
 ---
 
 import "@speakeasy-api/docs-md/docusaurus.css";
+import {
+Pill
+} from "@speakeasy-api/docs-md/react";
 
 
 # About Mistral AI API
@@ -15,3 +18,7 @@ Our Chat Completion and Embeddings APIs specification. Create your account on [L
 Servers
 
 - https://api.mistral.ai
+
+# Global Security
+
+### ApiKey <Pill variant="info">bearer</Pill> <Pill variant="info">http</Pill> \{#ApiKey\}
