--- a/examples/nextra/mistral/src/app/api/page.mdx
+++ b/examples/nextra/mistral/src/app/api/page.mdx
@@ -3,6 +3,9 @@ sidebarTitle: About
 ---
 
 import "@speakeasy-api/docs-md/nextra.css";
+import {
+Pill
+} from "@speakeasy-api/docs-md/react";
 
 
 # About Mistral AI API
@@ -14,3 +17,7 @@ Our Chat Completion and Embeddings APIs specification. Create your account on [L
 Servers
 
 - https://api.mistral.ai
+
+# Global Security
+
+### ApiKey <Pill variant="info">bearer</Pill> <Pill variant="info">http</Pill> [#ApiKey]
