--- a/examples/nextra/pokeapi/src/app/api/endpoint/contests/page.mdx
+++ b/examples/nextra/pokeapi/src/app/api/endpoint/contests/page.mdx
@@ -72,7 +72,7 @@ Contest types are categories judges used to weigh a PokÃ©mon's condition in PokÃ
   headingId="operation-api_v2_contest_type_list_security_cookieauth"
   typeAnnotations={[{"title":"cookie","variant":"info"},{"title":"apiKey","variant":"info"}]}
   hasFrontMatter={false}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -89,7 +89,7 @@ Contest types are categories judges used to weigh a PokÃ©mon's condition in PokÃ
   headingId="operation-api_v2_contest_type_list_security_basicauth"
   typeAnnotations={[{"title":"basic","variant":"info"},{"title":"http","variant":"info"}]}
   hasFrontMatter={false}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -129,7 +129,7 @@ Contest types are categories judges used to weigh a PokÃ©mon's condition in PokÃ
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"query","variant":"info"}]}
   hasFrontMatter={true}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -153,7 +153,7 @@ Number of results to return per page.
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"query","variant":"info"}]}
   hasFrontMatter={true}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -177,7 +177,7 @@ The initial index from which to return the results.
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"query","variant":"info"}]}
   hasFrontMatter={true}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -236,7 +236,7 @@ Case-insensitive query applied on the `name` property.
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
   hasFrontMatter={true}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -264,7 +264,7 @@ _Example:_
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
   hasFrontMatter={true}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -292,7 +292,7 @@ http://api.example.org/accounts/?offset=400&limit=100
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
   hasFrontMatter={true}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -320,7 +320,7 @@ http://api.example.org/accounts/?offset=200&limit=100
   typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_contest_type_list_responses_200_application-json_results_contesttypesummary\">ContestTypeSummary</a>","children":[{"label":"ContestTypeSummary","linkedLabel":"<a href=\"#operation-api_v2_contest_type_list_responses_200_application-json_results_contesttypesummary\">ContestTypeSummary</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
   hasFrontMatter={false}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -448,7 +448,7 @@ Contest types are categories judges used to weigh a PokÃ©mon's condition in PokÃ
   headingId="operation-api_v2_contest_type_retrieve_security_cookieauth"
   typeAnnotations={[{"title":"cookie","variant":"info"},{"title":"apiKey","variant":"info"}]}
   hasFrontMatter={false}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -465,7 +465,7 @@ Contest types are categories judges used to weigh a PokÃ©mon's condition in PokÃ
   headingId="operation-api_v2_contest_type_retrieve_security_basicauth"
   typeAnnotations={[{"title":"basic","variant":"info"},{"title":"http","variant":"info"}]}
   hasFrontMatter={false}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -505,7 +505,7 @@ Contest types are categories judges used to weigh a PokÃ©mon's condition in PokÃ
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"path","variant":"info"},{"title":"required","variant":"warning"}]}
   hasFrontMatter={true}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -563,7 +563,7 @@ This parameter can be a string or an integer.
   typeInfo={{"label":"berry_flavor","linkedLabel":"<a href=\"#operation-api_v2_contest_type_retrieve_responses_200_application-json_berry_flavor_berry_flavor\">berry_flavor</a>","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}
   hasFrontMatter={false}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -619,7 +619,7 @@ This parameter can be a string or an integer.
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}
   hasFrontMatter={false}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -637,7 +637,7 @@ This parameter can be a string or an integer.
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}
   hasFrontMatter={false}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -655,7 +655,7 @@ This parameter can be a string or an integer.
   typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_contest_type_retrieve_responses_200_application-json_names_contesttypename\">ContestTypeName</a>","children":[{"label":"ContestTypeName","linkedLabel":"<a href=\"#operation-api_v2_contest_type_retrieve_responses_200_application-json_names_contesttypename\">ContestTypeName</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}
   hasFrontMatter={false}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -840,7 +840,7 @@ Contest effects refer to the effects of moves when used in contests.
   headingId="operation-api_v2_contest_effect_list_security_cookieauth"
   typeAnnotations={[{"title":"cookie","variant":"info"},{"title":"apiKey","variant":"info"}]}
   hasFrontMatter={false}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -857,7 +857,7 @@ Contest effects refer to the effects of moves when used in contests.
   headingId="operation-api_v2_contest_effect_list_security_basicauth"
   typeAnnotations={[{"title":"basic","variant":"info"},{"title":"http","variant":"info"}]}
   hasFrontMatter={false}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -897,7 +897,7 @@ Contest effects refer to the effects of moves when used in contests.
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"query","variant":"info"}]}
   hasFrontMatter={true}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -921,7 +921,7 @@ Number of results to return per page.
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"query","variant":"info"}]}
   hasFrontMatter={true}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -945,7 +945,7 @@ The initial index from which to return the results.
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"query","variant":"info"}]}
   hasFrontMatter={true}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -1004,7 +1004,7 @@ Case-insensitive query applied on the `name` property.
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
   hasFrontMatter={true}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -1032,7 +1032,7 @@ _Example:_
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
   hasFrontMatter={true}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -1060,7 +1060,7 @@ http://api.example.org/accounts/?offset=400&limit=100
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
   hasFrontMatter={true}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -1088,7 +1088,7 @@ http://api.example.org/accounts/?offset=200&limit=100
   typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_contest_effect_list_responses_200_application-json_results_contesteffectsummary\">ContestEffectSummary</a>","children":[{"label":"ContestEffectSummary","linkedLabel":"<a href=\"#operation-api_v2_contest_effect_list_responses_200_application-json_results_contesteffectsummary\">ContestEffectSummary</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
   hasFrontMatter={false}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -1197,7 +1197,7 @@ Contest effects refer to the effects of moves when used in contests.
   headingId="operation-api_v2_contest_effect_retrieve_security_cookieauth"
   typeAnnotations={[{"title":"cookie","variant":"info"},{"title":"apiKey","variant":"info"}]}
   hasFrontMatter={false}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -1214,7 +1214,7 @@ Contest effects refer to the effects of moves when used in contests.
   headingId="operation-api_v2_contest_effect_retrieve_security_basicauth"
   typeAnnotations={[{"title":"basic","variant":"info"},{"title":"http","variant":"info"}]}
   hasFrontMatter={false}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -1254,7 +1254,7 @@ Contest effects refer to the effects of moves when used in contests.
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"path","variant":"info"},{"title":"required","variant":"warning"}]}
   hasFrontMatter={true}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -1312,7 +1312,7 @@ This parameter can be a string or an integer.
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}
   hasFrontMatter={false}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -1330,7 +1330,7 @@ This parameter can be a string or an integer.
   typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_contest_effect_retrieve_responses_200_application-json_effect_entries_contesteffecteffecttext\">ContestEffectEffectText</a>","children":[{"label":"ContestEffectEffectText","linkedLabel":"<a href=\"#operation-api_v2_contest_effect_retrieve_responses_200_application-json_effect_entries_contesteffecteffecttext\">ContestEffectEffectText</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}
   hasFrontMatter={false}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -1453,7 +1453,7 @@ This parameter can be a string or an integer.
   typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_contest_effect_retrieve_responses_200_application-json_flavor_text_entries_contesteffectflavortext\">ContestEffectFlavorText</a>","children":[{"label":"ContestEffectFlavorText","linkedLabel":"<a href=\"#operation-api_v2_contest_effect_retrieve_responses_200_application-json_flavor_text_entries_contesteffectflavortext\">ContestEffectFlavorText</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}
   hasFrontMatter={false}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -1576,7 +1576,7 @@ This parameter can be a string or an integer.
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}
   hasFrontMatter={false}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -1594,7 +1594,7 @@ This parameter can be a string or an integer.
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}
   hasFrontMatter={false}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -1655,7 +1655,7 @@ Super contest effects refer to the effects of moves when used in super contests.
   headingId="operation-api_v2_super_contest_effect_list_security_cookieauth"
   typeAnnotations={[{"title":"cookie","variant":"info"},{"title":"apiKey","variant":"info"}]}
   hasFrontMatter={false}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -1672,7 +1672,7 @@ Super contest effects refer to the effects of moves when used in super contests.
   headingId="operation-api_v2_super_contest_effect_list_security_basicauth"
   typeAnnotations={[{"title":"basic","variant":"info"},{"title":"http","variant":"info"}]}
   hasFrontMatter={false}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -1712,7 +1712,7 @@ Super contest effects refer to the effects of moves when used in super contests.
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"query","variant":"info"}]}
   hasFrontMatter={true}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -1736,7 +1736,7 @@ Number of results to return per page.
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"query","variant":"info"}]}
   hasFrontMatter={true}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -1760,7 +1760,7 @@ The initial index from which to return the results.
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"query","variant":"info"}]}
   hasFrontMatter={true}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -1819,7 +1819,7 @@ Case-insensitive query applied on the `name` property.
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
   hasFrontMatter={true}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -1847,7 +1847,7 @@ _Example:_
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
   hasFrontMatter={true}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -1875,7 +1875,7 @@ http://api.example.org/accounts/?offset=400&limit=100
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
   hasFrontMatter={true}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -1903,7 +1903,7 @@ http://api.example.org/accounts/?offset=200&limit=100
   typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_super_contest_effect_list_responses_200_application-json_results_supercontesteffectsummary\">SuperContestEffectSummary</a>","children":[{"label":"SuperContestEffectSummary","linkedLabel":"<a href=\"#operation-api_v2_super_contest_effect_list_responses_200_application-json_results_supercontesteffectsummary\">SuperContestEffectSummary</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[]}
   hasFrontMatter={false}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -2012,7 +2012,7 @@ Super contest effects refer to the effects of moves when used in super contests.
   headingId="operation-api_v2_super_contest_effect_retrieve_security_cookieauth"
   typeAnnotations={[{"title":"cookie","variant":"info"},{"title":"apiKey","variant":"info"}]}
   hasFrontMatter={false}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -2029,7 +2029,7 @@ Super contest effects refer to the effects of moves when used in super contests.
   headingId="operation-api_v2_super_contest_effect_retrieve_security_basicauth"
   typeAnnotations={[{"title":"basic","variant":"info"},{"title":"http","variant":"info"}]}
   hasFrontMatter={false}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -2069,7 +2069,7 @@ Super contest effects refer to the effects of moves when used in super contests.
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"path","variant":"info"},{"title":"required","variant":"warning"}]}
   hasFrontMatter={true}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -2127,7 +2127,7 @@ This parameter can be a string or an integer.
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}
   hasFrontMatter={false}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -2145,7 +2145,7 @@ This parameter can be a string or an integer.
   typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_super_contest_effect_retrieve_responses_200_application-json_flavor_text_entries_supercontesteffectflavortext\">SuperContestEffectFlavorText</a>","children":[{"label":"SuperContestEffectFlavorText","linkedLabel":"<a href=\"#operation-api_v2_super_contest_effect_retrieve_responses_200_application-json_flavor_text_entries_supercontesteffectflavortext\">SuperContestEffectFlavorText</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}
   hasFrontMatter={false}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -2268,7 +2268,7 @@ This parameter can be a string or an integer.
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}
   hasFrontMatter={false}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
@@ -2286,7 +2286,7 @@ This parameter can be a string or an integer.
   typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_super_contest_effect_retrieve_responses_200_application-json_moves_movesummary\">MoveSummary</a>","children":[{"label":"MoveSummary","linkedLabel":"<a href=\"#operation-api_v2_super_contest_effect_retrieve_responses_200_application-json_moves_movesummary\">MoveSummary</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
   typeAnnotations={[{"title":"required","variant":"warning"}]}
   hasFrontMatter={false}
-  expandByDefault={false}
+  expandByDefault={true}
 >
 
 <ExpandablePropertyTitle slot="title">
